Changed Class and id from Hello to app

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>React and Webpack4</title>
 </head>
 <body>
-	<section id="hello">not yet loaded...</section>
+	<section id="app">not yet loaded...</section>
 	<div id="line-user"></div>
 </body>
 </html>
